Changelog
=========

0.4.1 (2012-02-01)
------------------

- redirect_exception_response now sets content-length to 0


0.4 (2012-01-17)
----------------

- `ILayout` is no longer extending `IHTTPRenderer`, but simply `IRenderer`.
  This choice is influenced by the experience in the use of this component
  and does not prevent a `IHTTPRenderer` implementation of an `ILayout`
  component.

- An implementation of a `ILayout` component has been added : `HTTPWrappper`.
  This layout wraps a string into HTML base tags in order to make it more
  likely to have reusable renderers in other layouts.


0.3a1 (2012-01-05)
------------------

- Using now the new definitions from the ``cromlech.io`` split, introducing
  a more specific request and response, respectively : `IHTTPRequest` and 
  `IHTTPResponse`.

- Changed the way a redirection is done : this is no longer a defined
  class method. A new util function is provided to replace it. It creates
  a new response instead of modifying an existing one.


0.2 (2011-12-19)
----------------

- Changed requirements for BeautifulSoup to an existing version


0.1 (2011-07-29)
----------------

- Initial stable release